src/App.css
body {
  margin: 0px;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
}
h1 {
  margin: 0;
}

.appBody {
  width: 100%;
  overflow: hidden;
  padding-top: 1%;
  background: linear-gradient(
      135deg,
      #f8f8f8 22px,
      #fff 22px,
      #fff 24px,
      transparent 24px,
      transparent 67px,
      #fff 67px,
      #fff 69px,
      transparent 69px
    ),
    linear-gradient(
        225deg,
        #f8f8f8 22px,
        #fff 22px,
        #fff 24px,
        transparent 24px,
        transparent 67px,
        #fff 67px,
        #fff 69px,
        transparent 69px
      )
      0 64px;
  background-color: #f8f8f8;
  background-size: 64px 128px;
}
.appBody .carousel {
  width: 200%;
  transition: transform 1s ease-in-out;  
  will-change: transform;
}
body[dont-transition] .appBody .carousel {
  transition: none
}
html body.secondPage .appBody .carousel {
  transform: translateX(-50%);
}
html.arabic body.secondPage .appBody .carousel {
  transform: translateX(50%);
}

.appBody .carousel > div {
  vertical-align: top;
  display: inline-block;
  width: 50%;
}

.appBody .carousel > .rightFold {
  min-height: 90vh;
}

h1 {
  font-weight: 200;
}

.recharts-surface text {
  font-size: 0.7em;
}

.arabic {
  direction: rtl;
}
h1 {
  font-size: calc( 20px + (20 - 8) * (100vw - 400px) / (1000 - 400) );
}

